# labeling_system

./: README.md
front/: .env.example  index.html  package-lock.json  package.json
front/src/: App.tsx  styles.css
front/src/components/: Gallery.tsx  Image.tsx  ImageCard.tsx  Login.tsx  TagsApproval.tsx
front/src/components/admin/: AdminPage.tsx  TagsApproval.tsx  UserGroups.tsx
front/src/styles/: gallery_styles.css  image_page_styles.css  styles.css  tags_approval_styles.css  user_groups_styles.css
server/: .env.example  .gitignore  Cargo.toml  docker-compose.yml
server/ai/: Dockerfile  main.py
server/database/: labelsys.db
server/src/: Dockerfile  main.rs
server/src/ai/: handler.rs  model.rs  service.rs
server/src/auth/: handler.rs  mod.rs  model.rs  repository.rs  service.rs
server/src/common/: server_utils.rs
server/src/database/: database.csv  image_database.csv  imggroup_database.csv  labelsys.db  sessions_database.csv  tagrequests_database.csv  tags_database.csv  user_database.csv  usergroup_database.csv
server/src/image/: handler.rs  model.rs  repository.rs  service.rs
server/src/tags_requests/: handler.rs  model.rs  repository.rs  service.rs
server/src/user/: model.rs
server/src/user_groups/: handler.rs  model.rs  repository.rs  service.rs
