[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
csv = "1.4.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
